# libspec

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  from_needs_to_code.md  pyproject.toml
.claude/docs/adhoc/weave-libspec-plan-6f72290/: weave-concurrency-events.md
docs/: cli.md  compatibility.md  core.md  extensions.md  lifecycle.md  usage.md  workflow.md
docs/examples/: circular-deps.json  data-pipeline.json  edge-cases.json  http-client.json  lifecycle.json  minimal.json  workflow.json
docs/extensions/: compatibility.md
docs/proposals/: 001-principle-metadata.md  002-method-decorators.md  003-parameterized-cross-references.md  004-external-type-references.md  005-generic-param-descriptions.md  006-maturity-proposed-stage.md  IMPLEMENTATION_PROMPT.md  README.md
docs/specs/: tree-enhancements.md
src/libspec/: __init__.py  python_versions.py
src/libspec/cli/: __init__.py  app.py  config.py  jq.py  lifecycle_utils.py  output.py  spec_loader.py  workflow_utils.py
src/libspec/cli/commands/: analyze.py  codegen.py  inspect.py  lifecycle.py  navigate.py  query.py  validate.py
src/libspec/cli/lint/: __init__.py  base.py  registry.py  runner.py
src/libspec/cli/lint/rules/: __init__.py  completeness.py  consistency.py  extensions.py  lifecycle.py  maturity.py  naming.py  structural.py  version.py  workflow.py
src/libspec/cli/models/: __init__.py  lifecycle.py  lint.py  output.py  workflow.py
src/libspec/models/: __init__.py  base.py  core.py  types.py  utils.py
src/libspec/models/extensions/: __init__.py  async_.py  cli.py  config.py  data.py  errors.py  events.py  lifecycle.py  observability.py  orm.py  perf.py  plugins.py  safety.py  serialization.py  state.py  testing.py  versioning.py  web.py  workflow.py
src/libspec/schema/: core.schema.json
src/libspec/schema/extensions/: async.schema.json  cli.schema.json  config.schema.json  data.schema.json  errors.schema.json  events.schema.json  lifecycle.schema.json  observability.schema.json  orm.schema.json  perf.schema.json  plugins.schema.json  safety.schema.json  serialization.schema.json  state.schema.json  testing.schema.json  versioning.schema.json  web.schema.json  workflow.schema.json
tests/: __init__.py  test_cli_smoke.py  test_core_models.py  test_extension_validators.py  test_lint_version_rules.py  test_maturity.py  test_roundtrip.py  test_strict_mode.py  test_validate_api.py  test_validators.py
tools/: check_generated.py  generate_models.py  generate_schema.py
