[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libspec"
version = "0.1.0"
description = "A schema system for documenting library interfaces, architecture, and behavioral specifications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["documentation", "schema", "api", "specification", "json-schema"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]

dependencies = [
    "jsonschema>=4.0.0",
]

[project.scripts]
libspec = "libspec.cli:main"

[project.optional-dependencies]
cli = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
all = [
    "libspec[cli,dev]",
]

[project.urls]
Homepage = "https://github.com/yourorg/libspec"
Documentation = "https://libspec.dev"
Repository = "https://github.com/yourorg/libspec"

[tool.hatch.build.targets.wheel]
packages = ["src/libspec"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/docs",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
